multi-container-application/app-manifests/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    component: redis
  
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      name: redis
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
