multi-container-application/app-manifests/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
