multi-container-application/app-manifests/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service

spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
